--- a/gomoku.css
+++ b/gomoku.css
@@ -1,5 +1,10 @@
 *, *::before, *::after { box-sizing: border-box; }  
 * { margin: 0; }
+input, button, textarea, select { font: inherit; }
+p, h1, h2, h3, h4, h5, h6 { overflow-wrap: break-word; }
+p { text-wrap: pretty; }
+h1, h2, h3, h4, h5, h6 { text-wrap: balance; }  
+#root, #__next { isolation: isolate; }
 
 body {
   position: relative; 
@@ -21,7 +26,7 @@ body::before {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1; 
+  z-index: 1;
 }
 
 img, picture, video, canvas, svg {
@@ -29,23 +34,94 @@ img, picture, video, canvas, svg {
   max-width: 100%;
 }
 
-input, button, textarea, select { font: inherit; }
-p, h1, h2, h3, h4, h5, h6 { overflow-wrap: break-word; }
-p { text-wrap: pretty; }
-h1, h2, h3, h4, h5, h6 { text-wrap: balance; }  
-#root, #__next { isolation: isolate; }
-
 .container {
   position: relative; 
   border-radius: 5px;
   z-index: 2; 
-  height: 650px;
-  width: 650px;
+  height: 100%;
+  aspect-ratio: 1 / 1;
   display: grid;
   grid-template-rows: repeat(15, 1fr);
   grid-template-columns: repeat(15, 1fr);
   background-image: url(./images/wood.jpg);
   background-size: cover;
+}
+
+.left {
+  padding: 10px;
+  height: 100%;
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.upperRight {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.back {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.backButton {
+  height: 80%;
+  width: 80%;
+  background-image: url(./images/backtomainmenu.jpg);
+  background-size: 100% 100%;
+  border-radius: 30px;
+  border: none;
+  box-shadow: 0 5px 0 rgb(44, 44, 44);
+  z-index: 1;
+}
+
+.backButton:hover {
+  top: 2px;
+  box-shadow: 0 3px 0 rgb(44, 44, 44);
+}
+
+.backButton:active {
+  top: 5px;
+  box-shadow: 0 0px 0 rgb(44, 44, 44);
+}
+
+.backButton {
+  transition: all 0.1s ease;
+}
+
+.timer {
+  flex: 1;
+}
+
+.currentPlayer {
+  flex: 1;
+}
+
+.lowerRight {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.player1 {
+  flex: 1;
+}
+
+.player2 {
+  flex: 1;
+
 }
 
 .container div {
@@ -54,7 +130,7 @@ h1, h2, h3, h4, h5, h6 { text-wrap: balance; }
   align-items: center; 
 }
 
-button {
+.boardButton {
   height: 90%;
   width: 90%;
   border-radius: 9000px;
@@ -62,11 +138,11 @@ button {
   border: none;
 }
 
-button:hover {
+.boardButton:hover {
   outline: 5px solid green;
 }
 
-button:disabled:hover {
+.boardButton:disabled:hover {
   outline: none;
 }
 
