--- a/gomoku.css
+++ b/gomoku.css
@@ -16,6 +16,7 @@ body {
   align-items: center;
   background-image: url(./images/background.jpg);
   background-size: cover;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body::before {
@@ -76,6 +77,38 @@ img, picture, video, canvas, svg {
   align-items: center;
 }
 
+.reset {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.resetButton {
+  height: 80%;
+  width: 80%;
+  background-image: url(./images/resetboard.jpg);
+  background-size: 100% 100%;
+  border-radius: 30px;
+  border: none;
+  box-shadow: 0 5px 0 rgb(44, 44, 44);
+  z-index: 1;
+}
+
+.resetButton:hover {
+  top: 2px;
+  box-shadow: 0 3px 0 rgb(44, 44, 44);
+}
+
+.resetButton:active {
+  top: 5px;
+  box-shadow: 0 0px 0 rgb(44, 44, 44);
+}
+
+.resetButton {
+  transition: all 0.1s ease;
+}
+
 .backButton {
   height: 80%;
   width: 80%;
@@ -103,6 +136,13 @@ img, picture, video, canvas, svg {
 
 .timer {
   flex: 1;
+  display: flex;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  font-size: 45px;
+  font-weight: bold;
+  z-index: 1;
 }
 
 .currentPlayer {
